@@ -54,7 +54,7 @@ If you are interested in the current development state, the public development
 repository is at Github:
   svn co https://github.com/vanhauser-thc/thc-hydra
  or
-  git clone https://github.com/vanhauser-thc/thc-hydra.git
+  git clone https://github.com/vanhauser-thc/thc-hydra
 Use the development version at your own risk. It contains new features and
 new bugs. Things might not work!
 
